--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Choose Helper</string>
     <string name="action_settings">Settings</string>
     <string name="api_key_google_plus">AIzaSyClVNCQmD4G3IQaK4fWpjLj9hFXKaptPUw</string>
+    <integer name="com_vk_sdk_AppId">5304588</integer>
 
     <!-- Tips -->
     <string name="tip_incorrect_r_code">Incorrect request code.</string>
