--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="hint_password">Password</string>
 
     <!--Profile-->
-    <string name="toolbar_title">Profile</string>
+    <string name="profile_toolbar_title">Profile</string>
 
     <string name="large_text">
         "Material is the metaphor.\n\n"
