--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,7 @@
     <string name="compare_dialog_photo_title">Select picture for variant</string>
     <string name="qwe">You did not fill all fields</string>
     <string name="toast_no_internet">No internet connection</string>
+    <string name="img_description_avatar">Avatar</string>
+    <string name="img_description_icon_more">Icon more</string>
 
 </resources>
