--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,16 +55,11 @@
     <string name="compares">Compares</string>
     <string name="btn_label_new_compares_are_available">New compares are available! Click for show</string>
 
-    <!-- Alert dialogs -->
-    <string name="dialog_settings_title_compares_count">Compares count</string>
-    <string name="dialog_settings_title_language">Language</string>
-    <string name="dialog_settings_title_categories">Categories</string>
-    <string name="dialog_settings_btn_cancel">Cancel</string>
-    <string name="dialog_settings_language_en">English</string>
-    <string name="dialog_settings_language_ua">Ukraine</string>
-    <string name="dialog_settings_categories_food">Food</string>
-    <string name="dialog_settings_categories_sport">Sport</string>
-    <string name="dialog_settings_categories_other">Other</string>
+    <!-- Alert dialogs in settings -->
+    <string name="ad_title_compares_count">Compares count</string>
+    <string name="ad_title_language">Language</string>
+    <string name="ad_title_categories">Categories</string>
+    <string name="ad_btn_cancel">Cancel</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
