--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,6 +122,16 @@
         <item>Other</item>
     </string-array>
 
+    <string-array name="categories_codes">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
+
     <string-array name="numbers_of_compares">
         <item>5</item>
         <item>10</item>
@@ -133,8 +143,8 @@
 
     <string-array name="languages">
         <item>English</item>
-        <item>Ukrainian</item>
-        <item>Russian</item>
+        <item>Українська</item>
+        <item>Русский</item>
     </string-array>
 
 </resources>
