--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,7 +8,7 @@
     <!--actions-->
     <string name="action_settings">Настройки</string>
     <string name="action_search">Поиск</string>
-    <string name="action_edit_profile">Редактировать профиль</string>
+    <string name="action_change_password">Сменить пароль</string>
     <string name="action_forward">Вперед</string>
     <string name="action_done">Готово</string>
 
@@ -35,6 +35,7 @@
     <string name="toast_different_passwords">Пароли отличаются</string>
     <string name="toast_error_message">Ошибка</string>
     <string name="toast_wrong_email">Email не зарегистрирован</string>
+    <string name="toast_wrong_password">Неверный пароль</string>
 
     <!--hints-->
     <string name="hint_email">Эл. адрес</string>
@@ -49,6 +50,7 @@
     <string name="hint_question">Вопрос</string>
     <string name="hint_variants">Варианты</string>
     <string name="hint_description">Описание</string>
+    <string name="hint_old_password">Старый пароль</string>
 
     <!--progress dialogs-->
     <string name="pd_msg_wait_please">Подождите, пожалуйста…</string>
@@ -72,7 +74,7 @@
     <string name="label_reset_password">Сброс пароля</string>
 
     <!--button labels-->
-    <string name="btn_label_login">Авторизоваться</string>
+    <string name="btn_label_login">Войти</string>
     <string name="btn_label_follow">Подписаться</string>
     <string name="btn_label_un_follow">Отписаться</string>
     <string name="btn_label_forgot_password">Забыли пароль?</string>
@@ -89,13 +91,14 @@
 
     <!--settings keys-->
     <string name="settings_numbers_of_compares">settings_numbers_of_compares</string>
-    <!--<string name="settings_language">settings_language</string>-->
+    <string name="settings_language">settings_language</string>
     <string name="settings_categories">settings_categories</string>
     <string name="settings_notifications_liked">settings_notifications_liked</string>
     <string name="settings_notifications_commented">settings_notifications_commented</string>
     <string name="settings_notifications_f_new_compare">settings_notifications_fnc</string>
 
     <!--dialogs-->
+    <string name="dialog_change_pass">Пароль изменен</string>
     <string name="dialog_btn_send_email">Сбросить</string>
     <string name="dialog_btn_cancel">Отменить</string>
     <string name="dialog_reset_sent">Отравить…</string>
@@ -109,6 +112,8 @@
     <!--compare statuses-->
     <string name="status_open">Открыто</string>
     <string name="status_closed">Закрыто</string>
+    <string name="off">Отключено</string>
+    <string name="on">Включено</string>
 
     <!--Arrays-->
     <string-array name="photo_variants">
@@ -145,11 +150,11 @@
         <item>50</item>
     </string-array>
 
-    <!--<string-array name="languages">-->
-        <!--<item>English</item>-->
-        <!--<item>Українська</item>-->
-        <!--<item>Русский</item>-->
-    <!--</string-array>-->
+    <string-array name="languages">
+        <item>English</item>
+        <item>Українська</item>
+        <item>Русский</item>
+    </string-array>
 
     <string-array name="notifications">
         <item>On</item>
